--- a/resources/assets/css/main2.css
+++ b/resources/assets/css/main2.css
@@ -2,3 +2,12 @@
     margin-top:30px;
     text-align: center;
 }
+#posts{
+    margin-top:30px;
+    text-align: center;
+}
+
+#card{
+    margin-left:30px;
+    margin-right:30px;
+}
