--- a/resources/assets/css/main2.css
+++ b/resources/assets/css/main2.css
@@ -3,7 +3,7 @@
     text-align: center;
 }
 #posts{
-    margin-top:13px;
+    margin-top:20px;
     text-align: center;
 }
 
@@ -58,4 +58,26 @@
     -o-transform: rotate(-10deg);
     -ms-transform: rotate(-10deg);
     transform: rotate(-10deg);
+}
+/*MORPH*/
+.morph {
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.morph:hover {
+    border-radius: 50%;
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
+
+#burning {
+    color: #ADF;
+    font: 10px 'BlackJackRegular';
 }
